--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -2,13 +2,35 @@ name: Metrics
 on:
   schedule: [{cron: "0 * * * *"}]
   workflow_dispatch:
-  push: {branches: ["main"]}
+  push: {branches: ["*"]}
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
     permissions:
-      contents: write    
+      contents: write
     steps:
       - uses: schellj/metrics@main
         with:
           token: ${{ secrets.METRICS_TOKEN }}
+          user: schellj
+          template: classic
+          base: header, activity, repositories, metadata
+          base_indepth: yes
+          commits_authoring: Justin Schell, Schell, schellj, justin@gudtech.com, justin.schell@gudtech.com, justinmschell@gmail.com, schellj@bivio.biz
+          config_timezone: America/Los_Angeles
+          repositories_skipped: env-conf, rop-console-ios, gudtech/rop-console-ios
+          plugin_introduction: yes
+          plugin_introduction_title: yes
+          plugin_languages: yes
+          plugin_languages_analysis_timeout: 30
+          plugin_languages_categories: markup, programming
+          plugin_languages_colors: complementary
+          plugin_languages_limit: 12
+          plugin_languages_recent_days: 180
+          plugin_languages_recent_load: 1000
+          plugin_languages_sections: recently-used, most-used
+          plugin_languages_threshold: 5%
+          plugin_languages_details: bytes-size, percentage
+          plugin_lines: yes
+          repositories_affiliations: owner, collaborator, organization_member
+          repositories_batch: 100
