--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,6 +1,6 @@
 name: Metrics
 on:
-  schedule: [{cron: "*/5 * * * *"}]
+  schedule: [{cron: "0 * * * *"}]
   workflow_dispatch:
   push: {branches: ["main"]}
 jobs:
