--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -34,3 +34,5 @@ jobs:
           plugin_languages_threshold: 5%
           plugin_languages_details: bytes-size, percentage
           plugin_lines: yes
+          plugin_calendar: yes
+          plugin_calendar_limit: 2
