--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -24,7 +24,7 @@ jobs:
           plugin_languages: yes
           plugin_languages_analysis_timeout: 30
           plugin_languages_categories: markup, programming
-          plugin_languages_colors: complementary
+          plugin_languages_colors: github
           plugin_languages_limit: 12
           plugin_languages_recent_days: 180
           plugin_languages_recent_load: 1000
