--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -22,15 +22,15 @@ jobs:
           plugin_introduction: yes
           plugin_introduction_title: yes
           plugin_languages: yes
+          plugin_languages_indepth: yes
           plugin_languages_analysis_timeout: 30
-          plugin_languages_categories: markup, programming
           plugin_languages_colors: github
           plugin_languages_limit: 12
           plugin_languages_recent_days: 180
           plugin_languages_recent_load: 1000
-          plugin_languages_sections: recently-used, most-used
-          plugin_languages_threshold: 5%
-          plugin_languages_details: bytes-size, percentage
+          plugin_languages_sections: recently-used
+          plugin_languages_threshold: 0%
+          plugin_languages_details: percentage
           plugin_lines: yes
           plugin_topics: yes
           plugin_topics_mode: icons
