--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -14,7 +14,7 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           user: schellj
           template: classic
-          base: header, activity, metadata
+          base: header, activity, repositories, metadata
           base_indepth: yes
           commits_authoring: Justin Schell, Schell, schellj, justin@gudtech.com, justin.schell@gudtech.com, justinmschell@gmail.com, schellj@bivio.biz
           config_timezone: America/Los_Angeles
@@ -31,7 +31,6 @@ jobs:
           plugin_languages_sections: recently-used
           plugin_languages_threshold: 0%
           plugin_languages_details: percentage
-          plugin_lines: yes
           plugin_topics: yes
           plugin_topics_mode: icons
           plugin_topics_sort: stars
