--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -14,13 +14,11 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           user: schellj
           template: classic
-          base: activity
+          base: header, activity
           base_indepth: yes
           commits_authoring: Justin Schell, Schell, schellj, justin@gudtech.com, justin.schell@gudtech.com, justinmschell@gmail.com, schellj@bivio.biz
           config_timezone: America/Los_Angeles
           repositories_skipped: env-conf, rop-console-ios, gudtech/rop-console-ios
-          plugin_introduction: yes
-          plugin_introduction_title: yes
           plugin_languages: yes
           plugin_languages_indepth: yes
           plugin_languages_analysis_timeout: 30
