--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -14,6 +14,7 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           user: schellj
           template: classic
+          debug: true
           base: activity
           base_indepth: yes
           commits_authoring: Justin Schell, Schell, schellj, justin@gudtech.com, justin.schell@gudtech.com, justinmschell@gmail.com, schellj@bivio.biz
